--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://quantumpotato.github.io/morphing_marble_maze"
+  "homepage": "https://quantumpotato.github.io/morphing_marble_maze",
   "name": "morphin_marble_maze",
   "version": "0.1.0",
   "private": true,
