--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://quantumpotato.github.io/morphing_marble_maze"
+  "homepage": "https://quantumpotato.github.io/morphing_marble_maze",
   "name": "morphin_marble_maze",
   "version": "0.1.0",
   "private": true,
@@ -7,8 +7,6 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "eslint \"src/**/*\""
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.0",
@@ -21,6 +19,7 @@
     "@unrest/vue-storage": "^0.0.14",
     "autoprefixer": "^9",
     "core-js": "^3.6.5",
+    "phoenix": "^1.6.6",
     "postcss": "^7",
     "postcss-for": "^2.1.1",
     "postcss-import": "12",
