--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "eslint \"src/**/*\""
+    "lint": "eslint \"src/**/*\"",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build"
   },
@@ -21,6 +21,7 @@
     "@unrest/vue-storage": "^0.0.14",
     "autoprefixer": "^9",
     "core-js": "^3.6.5",
+    "phoenix": "^1.6.6",
     "postcss": "^7",
     "postcss-for": "^2.1.1",
     "postcss-import": "12",
