--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "eslint \"src/**/*\"",
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d dist"
+    "lint": "eslint \"src/**/*\""
   },
   "dependencies": {
     "@popperjs/core": "^2.11.0",
