--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vue-cli-service build",
     "lint": "eslint \"src/**/*\"",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.0",
